[package]
name = "csvexam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# crates.io: Rust Package Registry https://crates.io/
# Docs.rs crates.ioに登録されているライブラリのドキュメントサイト https://docs.rs/

# csv - Rust https://docs.rs/csv/latest/csv/
csv = "1.1"

# chrono - Rust https://docs.rs/chrono/0.4.19/chrono/
# chrono - crates.io: Rust Package Registry https://crates.io/crates/chrono
chrono = { version = "0.4", features = ["serde"]}


# regex - Rust https://docs.rs/regex/latest/regex/
regex = "1"

# rust-lang-nursery/lazy-static.rs: A small macro for defining lazy evaluated static variables in Rust. https://github.com/rust-lang-nursery/lazy-static.rs
lazy_static = "1.4.0"

# serde-rs/json: Strongly typed JSON library for Rust https://github.com/serde-rs/json
serde_json = "1.0"

# Using derive · Serde https://serde.rs/derive.html
serde = { version = "1.0", features = ["derive"] }
