[package]
name = "csvexam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

# crates.io: Rust Package Registry https://crates.io/
# Docs.rs crates.ioに登録されているライブラリのドキュメントサイト https://docs.rs/

# csv - Rust https://docs.rs/csv/latest/csv/
csv = "1.1"

# chrono - Rust https://docs.rs/chrono/0.4.19/chrono/
# chrono - crates.io: Rust Package Registry https://crates.io/crates/chrono
chrono = { version = "0.4", features = ["serde"]}


# regex - Rust https://docs.rs/regex/latest/regex/
regex = "1"

# rust-lang-nursery/lazy-static.rs: A small macro for defining lazy evaluated static variables in Rust. https://github.com/rust-lang-nursery/lazy-static.rs
lazy_static = "1.4.0"

# serde-rs/json: Strongly typed JSON library for Rust https://github.com/serde-rs/json
serde_json = "1.0"

# Using derive · Serde https://serde.rs/derive.html
serde = { version = "1.0", features = ["derive"] }


# log - crates.io: Rust Package Registry https://crates.io/crates/log
# env-logger-rs/env_logger: A logging implementation for `log` which is configured via an environment variable. https://github.com/env-logger-rs/env_logger/
log = "0.4"
# env_logger = "0.9.0"
# simplelog - crates.io: Rust Package Registry https://crates.io/crates/simplelog
# simplelog = {version = "^0.12.0",features=["termcolor"]}
simplelog = "^0.12.0"

# simplelogでログのタイムスタンプフォーマット指定に必要。 
# paris = "1.5"
time = { version = "0.3.7", features = ["formatting", "macros"] }


# estk/log4rs: A highly configurable logging framework for Rust https://github.com/estk/log4rs
# log4rs 1.1.1 - Docs.rs https://docs.rs/crate/log4rs/1.1.1
# log4rs = "1.1.1"

# config - crates.io: Rust Package Registry https://crates.io/crates/config
# MIT OR Apache-2.0 
config = "0.13.1"



# percent_encoding::utf8_percent_encode - Rust https://docs.rs/percent-encoding/2.1.0/percent_encoding/fn.utf8_percent_encode.html
percent-encoding="2.1.0"


# marshallpierce/rust-base64: base64, in rust https://github.com/marshallpierce/rust-base64
base64 = "0.13.0"


# encoding_rs - Rust https://docs.rs/encoding_rs/latest/encoding_rs/
# std::io traitで利用したい場合（std::io::Read）は、encoding_rs_io  を使うこと。

encoding_rs="0.8.31"

