[package]
name = "tokio_task_stop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio-rs/tokio: A runtime for writing reliable asynchronous applications with Rust. Provides I/O, networking, scheduling, timers, ... https://github.com/tokio-rs/tokio#readme
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
lazy_static = "1.4.0"
rand = "0.8.5"